# musiclaude

./: .gitignore  CLAUDE.md  README.md  environment.yml  pyproject.toml  song_contract.md
analysis/: dashboard.py  experiment_plots.py  listening_study.py  pdmx_exploration.py
codex/: INDEX.md  decisions.md  gotchas.md
codex/classifier/: architecture.md  decisions.md  gotchas.md
codex/compose/: decisions.md  musicxml-reference.md  pipeline.md
codex/dataset/: pdmx-analysis.md  pdmx-paper-notes.md
codex/experiments/: 001-baseline-training.md  002-dedup-pdmx-features.md  003-performance-directives.md  004-self-computed-features.md  (+7 more)
examples/: piano_waltz.musicxml  the_wager.musicxml
experiment/: .answer_key.json  007-blind-profile-comparison.md  RESULTS.md  hypothesis_canonical_profile.md  run_experiment.py
models/: distribution_scorer.joblib  feature_profile.joblib  feature_profile_v3.joblib  feature_profile_v3_dcml.joblib  feature_profile_v3_lieder.joblib  quality_classifier.joblib  quality_regressor.joblib
musiclaude/: __init__.py  render.py
rachmaniclaude/: __init__.py  render.py
report/: musiclaude.md  rachmaniclaude.md
scripts/: analyze_canonical_patterns.py  build_canonical_profile.py  build_subset_profiles.py  convert_mscx_to_mxl.py  extract_canonical_features.py  extract_maestro_features.py  extract_muspy_features.py  extract_new_features.py  fix_maestro_inference.py  rebuild_profile_with_maestro.py
soundfonts/: catalog.json
tests/: test_classifier.py  test_coherence.py  test_distribution.py  test_features.py  test_validator.py
(+139 files in other folders)
