[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "musiclaude"
version = "0.1.0"
description = "Music generation and quality assessment using LLMs and trained classifiers"
requires-python = ">=3.10"
dependencies = [
    "music21>=9.1",
    "pandas>=2.0",
    "numpy>=1.24",
    "xgboost>=2.0",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "tqdm>=4.65",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[project.scripts]
musiclaude-extract = "musiclaude.features.extract:main"
musiclaude-train = "musiclaude.classifier.train:main"

[tool.setuptools.packages.find]
include = ["musiclaude*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
